Upgrade to latest versions of everything